Improves instructions in README file

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ COMPOSE_PATH_SEPARATOR=:
 
 # Define the prefix of container names.
 # This is useful if you have multiple projects that use proj.name to have seperate containers per project.
-COMPOSE_PROJECT_NAME=store.mis
+COMPOSE_PROJECT_NAME=proj.name
 
 # Windows Path
 # A fix for Windows users, to ensure the application path works
@@ -36,7 +36,7 @@ COMPOSE_CONVERT_WINDOWS_PATHS=1
 DOCKER_FILES_DIR=./dock.d/files.d
 
 # Project base directory
-# For window 8,8.1 it is '/vps/store.mis' (projects folder is shared with docker machine),
+# For window 8,8.1 it is '/projects/proj.folder' (projects folder is shared with docker machine),
     # in above path project directory exists in root of docker machine, this is absolute path
 # For window 10, it is '.' i.e current directory it is relative path
 APP_BASE_DIR=.
@@ -106,7 +106,7 @@ DOCKER_HOST_IP=*.*.*.*
 
 # Remote Interpreter
 # Choose a Remote Interpreter entry matching name. Default is `proj.name`
-PHP_IDE_CONFIG=serverName=store.mis
+PHP_IDE_CONFIG=serverName=proj.name
 
 
 
@@ -128,7 +128,7 @@ APACHE_HTTPS_PORT=444
 APACHE_DOCUMENT_ROOT=/var/www/
 APACHE_DOCUMENT_ROOT_FLAG=:cached
 APACHE_CONFIG_PATH=/usr/local/apache2/conf
-APACHE_VIRTUAL_HOST=store.mis,bo.store.mis,shop.store.mis,mto.store.mis,isf.store.mis
+APACHE_VIRTUAL_HOST=vhost.name
 
 
 
