.env adds generic value

--- a/.env
+++ b/.env
@@ -148,11 +148,11 @@ NGINX_PHP_UPSTREAM_PORT=9000
 #---------------------------------------------------------
 MYSQL_VERSION=5.6.40
 MYSQL_TIMEZONE==UTC
-MYSQL_DATABASE=ds_foodcity_mini
-MYSQL_USER=fc_mini_usr
-MYSQL_PASSWORD=dsds1
+MYSQL_DATABASE=db_name
+MYSQL_USER=db_user
+MYSQL_PASSWORD=db_pass
 MYSQL_PORT=3307
-MYSQL_ROOT_PASSWORD=dsds1
+MYSQL_ROOT_PASSWORD=root_user_pass
 MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
 
 
