Updates enviroment file and readme file

--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ COMPOSE_CONVERT_WINDOWS_PATHS=1
 
 # Directory docker files
 # Same for WIN 8, 8.1, 10
-DOCKER_FILES_DIR=./dock.d/files.d
+DOCKER_FILES_DIR=./o-dock
 
 # Project base directory
 # For window 8,8.1 it is '/projects/proj.folder' (projects folder is shared with docker machine),
@@ -42,10 +42,10 @@ DOCKER_FILES_DIR=./dock.d/files.d
 APP_BASE_DIR=.
 
 # Choose config path on your machine
-APP_BASE_CONFIG_DIR=dock.d/conf.d
+APP_BASE_CONFIG_DIR=o-dock/_conf
 
 # Choose config path on your machine
-APP_BASE_LOG_DIR=dock.d/logs
+APP_BASE_LOG_DIR=o-dock/_logs
 
 # Point to the path of your applications code on your host
 APP_CODE_DIR=code
@@ -83,7 +83,7 @@ VOLUMES_DRIVER=local
 NETWORKS_DRIVER=bridge
 
 # Network to connect with
-NETWORK_NAME=nginx-proxy
+NETWORK_NAME=net1-nginx-proxy
 
 #
 #.........................................................
@@ -128,6 +128,9 @@ APACHE_HTTPS_PORT=444
 APACHE_DOCUMENT_ROOT=/var/www/
 APACHE_DOCUMENT_ROOT_FLAG=:cached
 APACHE_CONFIG_PATH=/usr/local/apache2/conf
+
+# Below will automatically configure reverse proxy if o[opendock/o-proxy](https://github.com/opendock/o-proxy) is running
+# For multiple virtual hosts, or sub domains provide comma separated list
 APACHE_VIRTUAL_HOST=vhost.name
 
 
