Update repository owner organization name, links in readme file.

--- a/.env
+++ b/.env
@@ -129,7 +129,7 @@ APACHE_DOCUMENT_ROOT=/var/www/
 APACHE_DOCUMENT_ROOT_FLAG=:cached
 APACHE_CONFIG_PATH=/usr/local/apache2/conf
 
-# Below will automatically configure reverse proxy if o[opendock/o-proxy](https://github.com/opendock/o-proxy) is running
+# Below will automatically configure reverse proxy if o[opendocks/o-proxy](https://github.com/opendocks/o-proxy) is running
 # For multiple virtual hosts, or sub domains provide comma separated list
 APACHE_VIRTUAL_HOST=vhost.name
 
