--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ volumes:
 networks:
   default:
     external:
-      name: nginx-proxy
+      name: ${NETWORK_NAME}
 # frontend:
 #   driver: ${NETWORKS_DRIVER}
 # backend:
@@ -104,9 +104,9 @@ services:
       APACHE_CONFIG_PATH: ${APACHE_CONFIG_PATH}
     volumes:
       - ${APP_BASE_DIR}/${APP_CODE_DIR}:${APACHE_DOCUMENT_ROOT}${APACHE_DOCUMENT_ROOT_FLAG}
-      - ${APP_BASE_DIR}/${APP_CONFIG_DIR}/${APP_APACHE_CONFIG_DIR}/sites/apache.conf:${APACHE_CONFIG_PATH}/apache.conf
-      - ${APP_BASE_DIR}/${APP_CONFIG_DIR}/${APP_APACHE_CONFIG_DIR}/ssl:/etc/apache/ssl
-      - ${APP_BASE_DIR}/${APP_LOG_DIR}/${APP_APACHE_LOG_DIR}:/var/log/apache2
+      - ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_APACHE_CONFIG_DIR}/sites/apache.conf:${APACHE_CONFIG_PATH}/apache.conf
+      - ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_APACHE_CONFIG_DIR}/ssl:/etc/apache/ssl
+      - ${APP_BASE_DIR}/${APP_BASE_LOG_DIR}/${APP_APACHE_LOG_DIR}:/var/log/apache2
     restart: always
     expose:
       - ${APACHE_HTTP_PORT}
@@ -143,53 +143,53 @@ services:
       context: ${DOCKER_FILES_DIR}/php-fpm
       args:
         - PHP_VERSION=${PHP_VERSION}
-        - ADDITIONAL_LOCALES=${PHP_FPM_ADDITIONAL_LOCALES}
-        - INSTALL_ADDITIONAL_LOCALES=${PHP_FPM_INSTALL_ADDITIONAL_LOCALES}
-        - INSTALL_AMQP=${PHP_FPM_INSTALL_AMQP}
-        - INSTALL_APCU=${PHP_FPM_INSTALL_APCU}
-        - INSTALL_BCMATH=${PHP_FPM_INSTALL_BCMATH}
-        - INSTALL_CALENDAR=${PHP_FPM_INSTALL_CALENDAR}
-        - INSTALL_COMPOSER=${PHP_FPM_INSTALL_COMPOSER}
-        - INSTALL_EXIF=${PHP_FPM_INSTALL_EXIF}
-        - INSTALL_FAKETIME=${PHP_FPM_INSTALL_FAKETIME}
-        - INSTALL_GHOSTSCRIPT=${PHP_FPM_INSTALL_GHOSTSCRIPT}
-        - INSTALL_GMP=${PHP_FPM_INSTALL_GMP}
-        - INSTALL_IMAGEMAGICK=${PHP_FPM_INSTALL_IMAGEMAGICK}
-        - INSTALL_IMAGE_OPTIMIZERS=${PHP_FPM_INSTALL_IMAGE_OPTIMIZERS}
-        - INSTALL_IMAP=${PHP_FPM_INSTALL_IMAP}
-        - INSTALL_INTL=${PHP_FPM_INSTALL_INTL}
-        - INSTALL_IONCUBE=${PHP_FPM_INSTALL_IONCUBE}
-        - INSTALL_LDAP=${PHP_FPM_INSTALL_LDAP}
-        - INSTALL_MEMCACHED=${PHP_FPM_INSTALL_MEMCACHED}
-        - INSTALL_MYSQLI=${PHP_FPM_INSTALL_MYSQLI}
-        - INSTALL_MYSQL_CLIENT=${PHP_FPM_INSTALL_MYSQL_CLIENT}
-        - INSTALL_MONGO=${PHP_FPM_INSTALL_MONGO}
-        - INSTALL_MSSQL=${PHP_FPM_INSTALL_MSSQL}
-        - INSTALL_OPCACHE=${PHP_FPM_INSTALL_OPCACHE}
-        - INSTALL_PCNTL=${PHP_FPM_INSTALL_PCNTL}
-        - INSTALL_PGSQL=${PHP_FPM_INSTALL_PGSQL}
-        - INSTALL_PG_CLIENT=${PHP_FPM_INSTALL_PG_CLIENT}
-        - INSTALL_PHPDBG=${PHP_FPM_INSTALL_PHPDBG}
-        - INSTALL_PHPREDIS=${PHP_FPM_INSTALL_PHPREDIS}
-        - INSTALL_SOAP=${PHP_FPM_INSTALL_SOAP}
-        - INSTALL_SSH2=${PHP_FPM_INSTALL_SSH2}
-        - INSTALL_SWOOLE=${PHP_FPM_INSTALL_SWOOLE}
-        - INSTALL_XDEBUG=${PHP_FPM_INSTALL_XDEBUG}
-        - INSTALL_XSL=${PHP_FPM_INSTALL_XSL}
-        - INSTALL_YAML=${PHP_FPM_INSTALL_YAML}
+        - ADDITIONAL_LOCALES=${PHP_ADDITIONAL_LOCALES}
+        - INSTALL_ADDITIONAL_LOCALES=${PHP_INSTALL_ADDITIONAL_LOCALES}
+        - INSTALL_AMQP=${PHP_INSTALL_AMQP}
+        - INSTALL_APCU=${PHP_INSTALL_APCU}
+        - INSTALL_BCMATH=${PHP_INSTALL_BCMATH}
+        - INSTALL_CALENDAR=${PHP_INSTALL_CALENDAR}
+        - INSTALL_COMPOSER=${PHP_INSTALL_COMPOSER}
+        - INSTALL_EXIF=${PHP_INSTALL_EXIF}
+        - INSTALL_FAKETIME=${PHP_INSTALL_FAKETIME}
+        - INSTALL_GHOSTSCRIPT=${PHP_INSTALL_GHOSTSCRIPT}
+        - INSTALL_GMP=${PHP_INSTALL_GMP}
+        - INSTALL_IMAGEMAGICK=${PHP_INSTALL_IMAGEMAGICK}
+        - INSTALL_IMAGE_OPTIMIZERS=${PHP_INSTALL_IMAGE_OPTIMIZERS}
+        - INSTALL_IMAP=${PHP_INSTALL_IMAP}
+        - INSTALL_INTL=${PHP_INSTALL_INTL}
+        - INSTALL_IONCUBE=${PHP_INSTALL_IONCUBE}
+        - INSTALL_LDAP=${PHP_INSTALL_LDAP}
+        - INSTALL_MEMCACHED=${PHP_INSTALL_MEMCACHED}
+        - INSTALL_MYSQLI=${PHP_INSTALL_MYSQLI}
+        - INSTALL_MYSQL_CLIENT=${PHP_INSTALL_MYSQL_CLIENT}
+        - INSTALL_MONGO=${PHP_INSTALL_MONGO}
+        - INSTALL_MSSQL=${PHP_INSTALL_MSSQL}
+        - INSTALL_OPCACHE=${PHP_INSTALL_OPCACHE}
+        - INSTALL_PCNTL=${PHP_INSTALL_PCNTL}
+        - INSTALL_PGSQL=${PHP_INSTALL_PGSQL}
+        - INSTALL_PG_CLIENT=${PHP_INSTALL_PG_CLIENT}
+        - INSTALL_PHPDBG=${PHP_INSTALL_PHPDBG}
+        - INSTALL_PHPREDIS=${PHP_INSTALL_PHPREDIS}
+        - INSTALL_SOAP=${PHP_INSTALL_SOAP}
+        - INSTALL_SSH2=${PHP_INSTALL_SSH2}
+        - INSTALL_SWOOLE=${PHP_INSTALL_SWOOLE}
+        - INSTALL_XDEBUG=${PHP_INSTALL_XDEBUG}
+        - INSTALL_XSL=${PHP_INSTALL_XSL}
+        - INSTALL_YAML=${PHP_INSTALL_YAML}
     container_name: ${COMPOSE_PROJECT_NAME}.php
     volumes:
-      - ${APP_BASE_DIR}/${APP_CONFIG_DIR}/${APP_PHP_CONFIG_DIR}/php${PHP_VERSION}.ini:/usr/local/etc/php/php.ini
-      #- ${APP_BASE_DIR}/${APP_CONFIG_DIR}/${APP_PHP_CONFIG_DIR}/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
-      #- ${APP_BASE_DIR}/${APP_CONFIG_DIR}/${APP_PHP_CONFIG_DIR}/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-      - ${APP_BASE_DIR}/${APP_CODE_DIR}:${PHP_FPM_DOCUMENT_ROOT}
+      - ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_PHP_CONFIG_DIR}/php${PHP_VERSION}.ini:/usr/local/etc/php/php.ini
+      #- ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_PHP_CONFIG_DIR}/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
+      #- ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_PHP_CONFIG_DIR}/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      - ${APP_BASE_DIR}/${APP_CODE_DIR}:${PHP_DOCUMENT_ROOT}
     expose:
       - "9000"
     extra_hosts:
       - "dockerhost:${DOCKER_HOST_IP}"
     environment:
       - PHP_IDE_CONFIG=${PHP_IDE_CONFIG}
-      - FAKETIME=${PHP_FPM_FAKETIME}
+      - FAKETIME=${PHP_FAKETIME}
 
   # MySQL
   #---------------------------------------------------------
@@ -207,7 +207,7 @@ services:
         - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
         - TZ=${MYSQL_TIMEZONE}
       volumes:
-        - ${APP_BASE_DIR}/${APP_CONFIG_DIR}/${APP_MYSQL_CONFIG_DIR}:/etc/mysql/conf.d
+        - ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_MYSQL_CONFIG_DIR}:/etc/mysql/conf.d
         - ${APP_BASE_DIR}/${APP_DATA_DIR}:/var/lib/mysql
       ports:
         - "${MYSQL_PORT}:3306"
