Changes as per new workspace image.

--- a/.env
+++ b/.env
@@ -102,7 +102,7 @@ PHP_INTERPRETER=php-fpm
 
 # Docker Host IP
 # Enter your Docker Host IP (will be appended to /etc/hosts). Default is `10.0.75.1`
-DOCKER_HOST_IP=*.*.*.*
+DOCKER_HOST_IP=10.0.75.1
 
 # Remote Interpreter
 # Choose a Remote Interpreter entry matching name. Default is `proj.name`
@@ -120,7 +120,7 @@ PHP_IDE_CONFIG=serverName=proj.name
 
 
 # APACHE
-#---------------------------------------------------------
+# ---------------------------------------------------------
 HTTPD_VERSION=2.4.33
 LINUX_DISTRO=alpine
 APACHE_HTTP_PORT=8080
@@ -136,7 +136,7 @@ APACHE_VIRTUAL_HOST=vhost.name
 
 
 # NGINX
-#---------------------------------------------------------
+# ---------------------------------------------------------
 NGINX_DOCUMENT_ROOT=/var/www/
 NGINX_DOCUMENT_ROOT_FLAG=:cached
 NGINX_CHANGE_SOURCE=false
@@ -148,7 +148,7 @@ NGINX_PHP_UPSTREAM_PORT=9000
 
 
 # MYSQL
-#---------------------------------------------------------
+# ---------------------------------------------------------
 MYSQL_VERSION=5.6.40
 MYSQL_TIMEZONE==UTC
 MYSQL_DATABASE=db_name
@@ -161,7 +161,7 @@ MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
 
 
 # PHP-FPM
-#---------------------------------------------------------
+# ---------------------------------------------------------
 PHP_ADDITIONAL_LOCALES="es_ES.UTF-8 fr_FR.UTF-8"
 PHP_DOCUMENT_ROOT=/var/www/
 PHP_FAKETIME=-0
@@ -202,64 +202,70 @@ PHP_INSTALL_YAML=false
 
 
 
-# WORKSPACE
-#---------------------------------------------------------
+# WORKSPACE (PHP & General)
+# PHP SPECIFIC: For General purpose set WS_BASE_TAG=php-${PHP_VERSION}
+# GENERAL PURPOSE:: For node only (no php included) set WS_BASE_TAG=general
+# ---------------------------------------------------------
+WS_BASE_TAG=php-7.2
 WS_CHROME_DRIVER_VERSION=2.42
-WS_COMPOSER_AUTH=false
-WS_COMPOSER_GLOBAL_INSTALL=true
-WS_COMPOSER_REPO_PACKAGIST=
 WS_DOCUMENT_ROOT=/var/www/
 WS_DRUSH_VERSION=8.1.17
-WS_NODE_VERSION=node
+WS_NODE_VERSION=10.17.0
 WS_NPM_REGISTRY=
 WS_PGID=1000
 WS_PUID=1000
 WS_SSH_PORT=2222
 WS_TIMEZONE=UTC
 WS_YARN_VERSION=latest
-WS_INSTALL_AMQP=false
 WS_INSTALL_DEPLOYER=false
 WS_INSTALL_DRUPAL_CONSOLE=false
 WS_INSTALL_DRUSH=false
 WS_INSTALL_DUSK_DEPS=false
 WS_INSTALL_FFMPEG=false
-WS_INSTALL_GMP=false
 WS_INSTALL_IMAGE_OPTIMIZERS=false
 WS_INSTALL_IMAGEMAGICK=false
-WS_INSTALL_IMAP=false
-WS_INSTALL_IONCUBE=false
-WS_INSTALL_LARAVEL_ENVOY=false
-WS_INSTALL_LARAVEL_INSTALLER=false
-WS_INSTALL_LDAP=false
 WS_INSTALL_LIBPNG=false
 WS_INSTALL_LINUXBREW=false
 WS_INSTALL_MC=false
-# Only make below one true for PHP version < 7.2
-WS_INSTALL_MCRYPT=false
-WS_INSTALL_MONGO=false
 WS_INSTALL_MSSQL=false
 WS_INSTALL_MYSQL_CLIENT=false
 WS_INSTALL_NODE=true
 WS_INSTALL_NPM_ANGULAR_CLI=true
 WS_INSTALL_NPM_BOWER=false
-WS_INSTALL_NPM_GULP=true
-WS_INSTALL_NPM_VUE_CLI=true
+WS_INSTALL_NPM_GULP=false
+WS_INSTALL_NPM_VUE_CLI=false
 WS_INSTALL_PG_CLIENT=false
-WS_INSTALL_PHPDBG=false
 WS_INSTALL_PHPREDIS=false
 WS_INSTALL_POWERLINE=false
 WS_INSTALL_PRESTISSIMO=false
 WS_INSTALL_PYTHON=false
-WS_INSTALL_SOAP=false
-WS_INSTALL_SSH2=false
 WS_INSTALL_SUBVERSION=false
-WS_INSTALL_SWOOLE=false
 WS_INSTALL_SYMFONY=false
 WS_INSTALL_TERRAFORM=false
 WS_INSTALL_V8JS=false
 WS_INSTALL_WS_SSH=true
-WS_INSTALL_WP_CLI=false
-WS_INSTALL_XDEBUG=true
-WS_INSTALL_XSL=false
 WS_INSTALL_YARN=false
-
+# ```````````````````````````````````````````````
+#                 Only PHP Specific
+# ```````````````````````````````````````````````
+WS_COMPOSER_AUTH=false
+WS_COMPOSER_GLOBAL_INSTALL=true
+WS_COMPOSER_REPO_PACKAGIST=
+WS_INSTALL_COMPOSER=true
+WS_INSTALL_AMQP=false
+WS_INSTALL_GMP=false
+WS_INSTALL_IMAP=false
+WS_INSTALL_IONCUBE=false
+WS_INSTALL_LARAVEL_ENVOY=false
+WS_INSTALL_LARAVEL_INSTALLER=false
+WS_INSTALL_LDAP=false
+# Only make WS_INSTALL_MCRYPT true for PHP version < 7.2
+WS_INSTALL_MCRYPT=false
+WS_INSTALL_MONGO=false
+WS_INSTALL_PHPDBG=false
+WS_INSTALL_SOAP=false
+WS_INSTALL_SSH2=false
+WS_INSTALL_SWOOLE=false
+WS_INSTALL_XDEBUG=false
+WS_INSTALL_WP_CLI=false
+WS_INSTALL_XSL=false
