--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     build:
       context: ${DOCKER_FILES_DIR}/workspace
       args:
+        - BASE_TAG=${WS_BASE_TAG}
         - CHROME_DRIVER_VERSION=${WS_CHROME_DRIVER_VERSION}
         - COMPOSER_AUTH=${WS_COMPOSER_AUTH}
         - COMPOSER_GLOBAL_INSTALL=${WS_COMPOSER_GLOBAL_INSTALL}
@@ -33,6 +34,7 @@ services:
         - TZ=${WS_TIMEZONE}
         - YARN_VERSION=${WS_YARN_VERSION}
         - INSTALL_AMQP=${WS_INSTALL_AMQP}
+        - INSTALL_COMPOSER=${WS_INSTALL_COMPOSER}
         - INSTALL_DEPLOYER=${WS_INSTALL_DEPLOYER}
         - INSTALL_DRUPAL_CONSOLE=${WS_INSTALL_DRUPAL_CONSOLE}
         - INSTALL_DRUSH=${WS_INSTALL_DRUSH}
@@ -85,9 +87,6 @@ services:
     environment:
       - PHP_VERSION=${PHP_VERSION}
       - PHP_IDE_CONFIG=${PHP_IDE_CONFIG}
-    networks:
-      - frontend
-      - backend
 
   # Apache Server
   #---------------------------------------------------------
@@ -131,10 +130,7 @@ services:
       - "${NGINX_HTTP_PORT}:80"
       - "${NGINX_HTTPS_PORT}:443"
     depends_on:
-      - php-fpm
-    networks:
-      - frontend
-      - backend
+      - php
 
   # PHP-FPM
   #---------------------------------------------------------
@@ -194,20 +190,20 @@ services:
   # MySQL
   #---------------------------------------------------------
   mysql:
-      build:
-        context: ${DOCKER_FILES_DIR}/mysql
-        args:
-          - MYSQL_VERSION=${MYSQL_VERSION}
-          - TZ=${MYSQL_TIMEZONE}
-      container_name: ${COMPOSE_PROJECT_NAME}.db
-      environment:
-        - MYSQL_DATABASE=${MYSQL_DATABASE}
-        - MYSQL_USER=${MYSQL_USER}
-        - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-        - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+    build:
+      context: ${DOCKER_FILES_DIR}/mysql
+      args:
+        - MYSQL_VERSION=${MYSQL_VERSION}
         - TZ=${MYSQL_TIMEZONE}
-      volumes:
-        - ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_MYSQL_CONFIG_DIR}:/etc/mysql/conf.d
-        - ${APP_BASE_DIR}/${APP_DATA_DIR}:/var/lib/mysql
-      ports:
-        - "${MYSQL_PORT}:3306"
+    container_name: ${COMPOSE_PROJECT_NAME}.db
+    environment:
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - TZ=${MYSQL_TIMEZONE}
+    volumes:
+      - ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_MYSQL_CONFIG_DIR}:/etc/mysql/conf.d
+      - ${APP_BASE_DIR}/${APP_DATA_DIR}:/var/lib/mysql
+    ports:
+      - "${MYSQL_PORT}:3306"
