[skip ci] Updates to add variables for NPM CHECK UPDATES package for workspace service

--- a/.env
+++ b/.env
@@ -199,16 +199,18 @@ PHP_INSTALL_SWOOLE=false
 PHP_INSTALL_XDEBUG=true
 PHP_INSTALL_XSL=false
 PHP_INSTALL_YAML=false
+PHP_INSTALL_ZIP=true
 
 
 
 # WORKSPACE (PHP & General)
-# PHP SPECIFIC: For General purpose set WS_BASE_TAG=php-${PHP_VERSION}
+# PHP SPECIFIC: For General purpose set WS_BASE_TAG=php-php_version e.g. php-7.2
 # GENERAL PURPOSE:: For node only (no php included) set WS_BASE_TAG=general
 # ---------------------------------------------------------
 WS_BASE_TAG=php-7.2
 WS_CHROME_DRIVER_VERSION=2.42
 WS_DOCUMENT_ROOT=/var/www/
+WS_DOCUMENT_ROOT_FLAG=:cached
 WS_DRUSH_VERSION=8.1.17
 WS_NODE_VERSION=10.17.0
 WS_NPM_REGISTRY=
@@ -230,6 +232,7 @@ WS_INSTALL_MC=false
 WS_INSTALL_MSSQL=false
 WS_INSTALL_MYSQL_CLIENT=false
 WS_INSTALL_NODE=true
+WS_INSTALL_NPM_CHECK_UPDATE=true
 WS_INSTALL_NPM_ANGULAR_CLI=true
 WS_INSTALL_NPM_BOWER=false
 WS_INSTALL_NPM_GULP=false
