--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
         - INSTALL_MSSQL=${WS_INSTALL_MSSQL}
         - INSTALL_MYSQL_CLIENT=${WS_INSTALL_MYSQL_CLIENT}
         - INSTALL_NODE=${WS_INSTALL_NODE}
+        - INSTALL_NPM_CHECK_UPDATE=${WS_INSTALL_NPM_CHECK_UPDATE}
         - INSTALL_NPM_ANGULAR_CLI=${WS_INSTALL_NPM_ANGULAR_CLI}
         - INSTALL_NPM_BOWER=${WS_INSTALL_NPM_BOWER}
         - INSTALL_NPM_GULP=${WS_INSTALL_NPM_GULP}
@@ -80,7 +81,7 @@ services:
         - INSTALL_YARN=${WS_INSTALL_YARN}
     container_name: ${COMPOSE_PROJECT_NAME}.ws
     volumes:
-      - ${APP_BASE_DIR}/${APP_CODE_DIR}:${WS_DOCUMENT_ROOT}
+      - ${APP_BASE_DIR}/${APP_CODE_DIR}:${APACHE_DOCUMENT_ROOT}${WS_DOCUMENT_ROOT_FLAG}
     ports:
       - "${WS_SSH_PORT}:22"
     tty: true
@@ -121,6 +122,7 @@ services:
         - PHP_UPSTREAM_CONTAINER=${NGINX_PHP_UPSTREAM_CONTAINER}
         - PHP_UPSTREAM_PORT=${NGINX_PHP_UPSTREAM_PORT}
         - CHANGE_SOURCE=${NGINX_CHANGE_SOURCE}
+    container_name: ${COMPOSE_PROJECT_NAME}.apache
     volumes:
       - ${APP_BASE_DIR}/${APP_CODE_DIR}:${NGINX_DOCUMENT_ROOT}${NGINX_DOCUMENT_ROOT_FLAG}
       - ${APP_BASE_DIR}/${APP_BASE_LOG_DIR}/${APP_NGINX_LOG_DIR}:/var/log/nginx
@@ -129,8 +131,6 @@ services:
     ports:
       - "${NGINX_HTTP_PORT}:80"
       - "${NGINX_HTTPS_PORT}:443"
-    depends_on:
-      - php
 
   # PHP-FPM
   #---------------------------------------------------------
@@ -173,6 +173,7 @@ services:
         - INSTALL_XDEBUG=${PHP_INSTALL_XDEBUG}
         - INSTALL_XSL=${PHP_INSTALL_XSL}
         - INSTALL_YAML=${PHP_INSTALL_YAML}
+        - INSTALL_ZIP=${PHP_INSTALL_ZIP}
     container_name: ${COMPOSE_PROJECT_NAME}.php
     volumes:
       - ${APP_BASE_DIR}/${APP_BASE_CONFIG_DIR}/${APP_PHP_CONFIG_DIR}/php${PHP_VERSION}.ini:/usr/local/etc/php/php.ini
