Adds support for Mongo, NodeJs services

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #
-#.........................................................
-# Docker compose files
-#.........................................................
+# ......................................................................................................................
+#                                               DOCKER COMPOSE FILES
+# ......................................................................................................................
 #
 # Used by docker compose for basic setup
 #
@@ -21,12 +21,16 @@ COMPOSE_PROJECT_NAME=proj.name
 # A fix for Windows users, to ensure the application path works
 COMPOSE_CONVERT_WINDOWS_PATHS=1
 
+# CUSTOME: Images Namespace, to be use as image name prefeix
+# As convention, replace DOT in proj.name with HYPHEN
+COMPOSE_IMAGES_NAMESPACE=proj-name
+
 
 
 #
-#.........................................................
-# Paths
-#.........................................................
+# ......................................................................................................................
+#                                                       PATHS
+# ......................................................................................................................
 #
 # Path to different directories on host machine
 #
@@ -69,9 +73,9 @@ APP_MYSQL_LOG_DIR=mysql
 
 
 #
-#.........................................................
-# Drivers
-#.........................................................
+# ......................................................................................................................
+#                                                      DRIVERS
+# ......................................................................................................................
 #
 # Different type of drivers settings
 #
@@ -86,9 +90,9 @@ NETWORKS_DRIVER=bridge
 NETWORK_NAME=net1-nginx-proxy
 
 #
-#.........................................................
-# Global
-#.........................................................
+# ......................................................................................................................
+#                                                        GLOBAL
+# ......................................................................................................................
 #
 # Variable shared between different services will come here
 #
@@ -111,16 +115,22 @@ PHP_IDE_CONFIG=serverName=proj.name
 
 
 #
-#.........................................................
-# Containers Customization
-#.........................................................
+# ......................................................................................................................
+#                                            CONTAINERS CUSTOMIZATION
+# ......................................................................................................................
 #
 # Container's specific variables will come below
 #
 
 
+
+#
 # APACHE
-# ---------------------------------------------------------
+# - APACHE_VIRTUAL_HOST
+#       : automatically configures reverse proxy if [opendocks/o-proxy](https://github.com/opendocks/o-proxy) is running
+#       : For multiple virtual hosts, or sub domains provide comma separated list
+# ----------------------------------------------------------------------------------------------------------------------
+#
 HTTPD_VERSION=2.4.33
 LINUX_DISTRO=alpine
 APACHE_HTTP_PORT=8080
@@ -128,27 +138,47 @@ APACHE_HTTPS_PORT=444
 APACHE_DOCUMENT_ROOT=/var/www/
 APACHE_DOCUMENT_ROOT_FLAG=:cached
 APACHE_CONFIG_PATH=/usr/local/apache2/conf
-
-# Below will automatically configure reverse proxy if o[opendocks/o-proxy](https://github.com/opendocks/o-proxy) is running
-# For multiple virtual hosts, or sub domains provide comma separated list
-APACHE_VIRTUAL_HOST=vhost.name
+APACHE_VIRTUAL_HOST=proj.name
 
 
 
+#
 # NGINX
-# ---------------------------------------------------------
+# - NGINX_UPSTREAM_CONTAINER
+#       : node or php
+# ----------------------------------------------------------------------------------------------------------------------
+#
 NGINX_DOCUMENT_ROOT=/var/www/
 NGINX_DOCUMENT_ROOT_FLAG=:cached
 NGINX_CHANGE_SOURCE=false
 NGINX_HTTP_PORT=80
 NGINX_HTTPS_PORT=4443
-NGINX_PHP_UPSTREAM_CONTAINER=php-fpm
-NGINX_PHP_UPSTREAM_PORT=9000
+NGINX_UPSTREAM_CONTAINER=php
+NGINX_UPSTREAM_PORT=9000
 
 
 
+#
+# NODE
+# ----------------------------------------------------------------------------------------------------------------------
+#
+NODE_INSTALL_INTL=true
+NODE_INSTALL_IMAGEMAGICK=true
+NODE_INSTALL_IMAGE_OPTIMIZERS=true
+NODE_INSTALL_GHOSTSCRIPT=false
+NODE_PG_CLIENT=false
+NODE_INSTALL_YARN=true
+NODE_YARN_VERSION=latest
+NODE_NPM_START_SCRIPT=start
+NODE_PUPPETEER_SUPPORT=false
+NODE_DOCUMENT_ROOT=/var/www/
+
+
+
+#
 # MYSQL
-# ---------------------------------------------------------
+# ----------------------------------------------------------------------------------------------------------------------
+#
 MYSQL_VERSION=5.6.40
 MYSQL_TIMEZONE==UTC
 MYSQL_DATABASE=db_name
@@ -160,8 +190,27 @@ MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
 
 
 
+#
+# MONGO
+# ----------------------------------------------------------------------------------------------------------------------
+#
+MONGODB_PORT=27017
+
+
+
+# MONGO WEBUI
+# ----------------------------------------------------------------------------------------------------------------------
+MONGO_WEBUI_PORT=3000
+MONGO_WEBUI_ROOT_URL=http://localhost
+MONGO_WEBUI_MONGO_URL=mongodb://mongo:27017/
+MONGO_WEBUI_INSTALL_MONGO=false
+
+
+
+#
 # PHP-FPM
-# ---------------------------------------------------------
+# ----------------------------------------------------------------------------------------------------------------------
+#
 PHP_ADDITIONAL_LOCALES="es_ES.UTF-8 fr_FR.UTF-8"
 PHP_DOCUMENT_ROOT=/var/www/
 PHP_FAKETIME=-0
@@ -203,10 +252,14 @@ PHP_INSTALL_ZIP=true
 
 
 
+#
 # WORKSPACE (PHP & General)
 # PHP SPECIFIC: For General purpose set WS_BASE_TAG=php-php_version e.g. php-7.2
 # GENERAL PURPOSE:: For node only (no php included) set WS_BASE_TAG=general
-# ---------------------------------------------------------
+# - WS_INSTALL_MCRYPT
+#       : Only make WS_INSTALL_MCRYPT true for PHP version < 7.2
+# -------------------------------------------------------------------------------
+#
 WS_BASE_TAG=php-7.2
 WS_CHROME_DRIVER_VERSION=2.42
 WS_DOCUMENT_ROOT=/var/www/
@@ -248,9 +301,9 @@ WS_INSTALL_TERRAFORM=false
 WS_INSTALL_V8JS=false
 WS_INSTALL_WS_SSH=true
 WS_INSTALL_YARN=false
-# ```````````````````````````````````````````````
-#                 Only PHP Specific
-# ```````````````````````````````````````````````
+#
+#  Only PHP Specific
+#
 WS_COMPOSER_AUTH=false
 WS_COMPOSER_GLOBAL_INSTALL=true
 WS_COMPOSER_REPO_PACKAGIST=
@@ -262,7 +315,6 @@ WS_INSTALL_IONCUBE=false
 WS_INSTALL_LARAVEL_ENVOY=false
 WS_INSTALL_LARAVEL_INSTALLER=false
 WS_INSTALL_LDAP=false
-# Only make WS_INSTALL_MCRYPT true for PHP version < 7.2
 WS_INSTALL_MCRYPT=false
 WS_INSTALL_MONGO=false
 WS_INSTALL_PHPDBG=false
