Updates for mongo and node services, add sample code for node app

--- a/.env
+++ b/.env
@@ -104,6 +104,9 @@ PHP_VERSION=7.2
 # Accepted values: hhvm - php-fpm
 PHP_INTERPRETER=php-fpm
 
+# Accepted Values
+NODE_VERSION=10.17.0
+
 # Docker Host IP
 # Enter your Docker Host IP (will be appended to /etc/hosts). Default is `10.0.75.1`
 DOCKER_HOST_IP=10.0.75.1
@@ -169,6 +172,7 @@ NODE_INSTALL_GHOSTSCRIPT=false
 NODE_PG_CLIENT=false
 NODE_INSTALL_YARN=true
 NODE_YARN_VERSION=latest
+NODE_INSTALL_NODEMON=true
 NODE_NPM_START_SCRIPT=start
 NODE_PUPPETEER_SUPPORT=false
 NODE_DOCUMENT_ROOT=/var/www/
@@ -187,6 +191,7 @@ MYSQL_PASSWORD=db_pass
 MYSQL_PORT=3307
 MYSQL_ROOT_PASSWORD=root_user_pass
 MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
+MYSQL_VIRTUAL_HOST=mysql.db
 
 
 
@@ -195,14 +200,18 @@ MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
 # ----------------------------------------------------------------------------------------------------------------------
 #
 MONGODB_PORT=27017
-
+MONGODB_DATABASE=
+MONGODB_ROOT_USERNAME=
+MONGODB_ROOT_PASSWORD=
+MONGO_VIRTUAL_HOST=mongo.db
 
 
 # MONGO WEBUI
 # ----------------------------------------------------------------------------------------------------------------------
 MONGO_WEBUI_PORT=3000
-MONGO_WEBUI_ROOT_URL=http://localhost
-MONGO_WEBUI_MONGO_URL=mongodb://mongo:27017/
+MONGO_WEBUI_VIRTUAL_HOST=mongoui.web
+MONGO_WEBUI_ROOT_URL=http://mongoui.web
+MONGO_WEBUI_MONGO_URL=mongodb://mongo.container.name:27017/testdb
 MONGO_WEBUI_INSTALL_MONGO=false
 
 
@@ -288,7 +297,7 @@ WS_INSTALL_NODE=true
 WS_INSTALL_NPM_CHECK_UPDATE=true
 WS_INSTALL_NPM_ANGULAR_CLI=true
 WS_INSTALL_NPM_BOWER=false
-WS_INSTALL_NPM_GULP=false
+WS_INSTALL_NPM_GULP=true
 WS_INSTALL_NPM_VUE_CLI=false
 WS_INSTALL_PG_CLIENT=false
 WS_INSTALL_PHPREDIS=false
@@ -300,14 +309,14 @@ WS_INSTALL_SYMFONY=false
 WS_INSTALL_TERRAFORM=false
 WS_INSTALL_V8JS=false
 WS_INSTALL_WS_SSH=true
-WS_INSTALL_YARN=false
+WS_INSTALL_YARN=true
 #
 #  Only PHP Specific
 #
 WS_COMPOSER_AUTH=false
-WS_COMPOSER_GLOBAL_INSTALL=true
+WS_COMPOSER_GLOBAL_INSTALL=false
 WS_COMPOSER_REPO_PACKAGIST=
-WS_INSTALL_COMPOSER=true
+WS_INSTALL_COMPOSER=false
 WS_INSTALL_AMQP=false
 WS_INSTALL_GMP=false
 WS_INSTALL_IMAP=false
