--- a/.env
+++ b/.env
@@ -158,6 +158,7 @@ NGINX_HTTP_PORT=80
 NGINX_HTTPS_PORT=4443
 NGINX_UPSTREAM_CONTAINER=php
 NGINX_UPSTREAM_PORT=9000
+NGINX_VIRTUAL_HOST=proj.name
 
 
 
@@ -176,7 +177,7 @@ NODE_INSTALL_NODEMON=true
 NODE_NPM_START_SCRIPT=start
 NODE_PUPPETEER_SUPPORT=false
 NODE_DOCUMENT_ROOT=/var/www/
-
+NODE_VIRTUAL_HOST=proj.name
 
 
 #
