Updates env template, improve comments

--- a/.env
+++ b/.env
@@ -1,4 +1,17 @@
 #
+#.........................................................
+# Project Details
+#.........................................................
+# Project Identifier: {{PROJECT-IDENTIFIER}}
+# TLD: {{TLD}}
+# Description: Project description.
+# Services:
+#   - Service 1 (e.g. PHP Service),
+#   - Service 2 (e.g. MySQL),
+#   - etc
+#
+
+#
 # ......................................................................................................................
 #                                               DOCKER COMPOSE FILES
 # ......................................................................................................................
@@ -14,16 +27,16 @@ COMPOSE_FILE=docker-compose.yml
 COMPOSE_PATH_SEPARATOR=:
 
 # Define the prefix of container names.
-# This is useful if you have multiple projects that use proj.name to have seperate containers per project.
-COMPOSE_PROJECT_NAME=proj.name
+# This is useful if you have multiple projects that use {PROJECT-IDENTIFIER}.{TLD} to have seperate containers per project.
+COMPOSE_PROJECT_NAME={{PROJECT-IDENTIFIER}}.{{TLD}}
 
 # Windows Path
 # A fix for Windows users, to ensure the application path works
 COMPOSE_CONVERT_WINDOWS_PATHS=1
 
 # CUSTOME: Images Namespace, to be use as image name prefeix
-# As convention, replace DOT in proj.name with HYPHEN
-COMPOSE_IMAGES_NAMESPACE=proj-name
+# As convention, use {PROJECT-IDENTIFIER}
+COMPOSE_IMAGES_NAMESPACE={{PROJECT-IDENTIFIER}}
 
 
 
@@ -40,8 +53,12 @@ COMPOSE_IMAGES_NAMESPACE=proj-name
 DOCKER_FILES_DIR=./o-dock
 
 # Project base directory
-# For window 8,8.1 it is '/projects/proj.folder' (projects folder is shared with docker machine),
-    # in above path project directory exists in root of docker machine, this is absolute path
+# As a convention place your project in {TLD}/{PROJECT-IDENTIFIER}/ directory on host machine.
+# Mount {TLD} directory of host machine on docker machine root with same name,
+#   i.e. means {TLD} host directory will exists in root of docker machine.
+# For window 8,8.1 it is '/{TLD}/{PROJECT-IDENTIFIER}', it is absolute path w.r.t to docker machine.
+    # Remember, in above path {TLD} directory exists in root of docker machine
+    # {PROJECT-IDENTIFIER} is project folder
 # For window 10, it is '.' i.e current directory it is relative path
 APP_BASE_DIR=.
 
@@ -98,8 +115,8 @@ NETWORK_NAME=net1-nginx-proxy
 #
 
 
-# Accepted values: 7.3 - 7.2 - 7.1 - 7.0 - 5.6
-PHP_VERSION=7.2
+# Accepted values: 7.4 - 7.3 - 7.2 - 7.1 - 7.0 - 5.6
+PHP_VERSION=7.4
 
 # Accepted values: hhvm - php-fpm
 PHP_INTERPRETER=php-fpm
@@ -112,8 +129,8 @@ NODE_VERSION=10.17.0
 DOCKER_HOST_IP=10.0.75.1
 
 # Remote Interpreter
-# Choose a Remote Interpreter entry matching name. Default is `proj.name`
-PHP_IDE_CONFIG=serverName=proj.name
+# Choose a Remote Interpreter entry matching name. Default is `{PROJECT-IDENTIFIER}.{TLD}`
+PHP_IDE_CONFIG=serverName={{PROJECT-IDENTIFIER}}.{{TLD}}
 
 
 
@@ -129,9 +146,69 @@ PHP_IDE_CONFIG=serverName=proj.name
 
 #
 # APACHE
-# - APACHE_VIRTUAL_HOST
-#       : automatically configures reverse proxy if [opendocks/o-proxy](https://github.com/opendocks/o-proxy) is running
-#       : For multiple virtual hosts, or sub domains provide comma separated list
+# Configuration Options:
+# Option 1: Use single appache service for multiple host
+#   - Suppose code directory contain multiple sub directories, each belongs to single host, you need to add virtual manually
+#   - File to add/configure virtual hosts is ./o-dock/_conf/apache/sites/apache.conf
+#   - Its is possible to configure single appache service for multiple hosts, however we need separat PHP services for different apps
+#   - So need to configure ProxyPassMatch for each virtual host accordingly
+#   - Example 1:
+#       Below is example virtual host configurations, if app exists with root folder i.e in folder {PROJECT-IDENTIFIER}/code
+#        <VirtualHost *:80>
+#            Options Indexes FollowSymLinks
+#            # Proxy .php requests to port 9000 of the php-fpm container
+#            ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://{PROJECT-IDENTIFIER}.{TLD}.php:9000/var/www/$1
+#            ServerName {PROJECT-IDENTIFIER}.{TLD}
+#            DocumentRoot /var/www
+#            <Directory /var/www/>
+#                DirectoryIndex index.html
+#                AllowOverride All
+#                <IfVersion < 2.4>
+#                      Allow from all
+#                </IfVersion>
+#                <IfVersion >= 2.4>
+#                  Require all granted
+#                </IfVersion>
+#            </Directory>
+#            # Send apache logs to stdout and stderr
+#            CustomLog /proc/self/fd/1 common
+#            ErrorLog /proc/self/fd/2
+#        </VirtualHost>
+#
+#   - Example 2:
+#       Below is example virtual host configurations, if app exists in sub-directory within root folder i.e in folder {PROJECT-IDENTIFIER}/code
+#       You can add as many virtual hosts as you like
+#
+#       {UNIQUE-SERVICE-IDENTIFIER}: It is encourged to use sub-directory name
+#       {SUB-DOMAIN}: It is encourged to use sub-directory name
+#
+#        <VirtualHost *:80>
+#            Options Indexes FollowSymLinks
+#            # Proxy .php requests to port 9000 of the php-fpm container
+#            ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://{PROJECT-IDENTIFIER}.{TLD}.php.{UNIQUE-SERVICE-IDENTIFIER}:9000/var/www/$1
+#            ServerName {SUB-DOMAIN}.{PROJECT-IDENTIFIER}.{TLD}
+#            DocumentRoot /var/www
+#            <Directory /var/www/>
+#                DirectoryIndex index.html
+#                AllowOverride All
+#                <IfVersion < 2.4>
+#                      Allow from all
+#                </IfVersion>
+#                <IfVersion >= 2.4>
+#                  Require all granted
+#                </IfVersion>
+#            </Directory>
+#            # Send apache logs to stdout and stderr
+#            CustomLog /proc/self/fd/1 common
+#            ErrorLog /proc/self/fd/2
+#        </VirtualHost>
+#
+# Option 2: Use multiple appache services for each host
+#   - That is easy one just need to configure sigle host, see Example 1, above
+#
+# APACHE_VIRTUAL_HOST
+#   - Automatically configures reverse proxy if [opendocks/o-proxy](https://github.com/opendocks/o-proxy) is running
+#   - For multiple virtual hosts, or sub domains provide comma separated lis
 # ----------------------------------------------------------------------------------------------------------------------
 #
 HTTPD_VERSION=2.4.33
@@ -141,7 +218,7 @@ APACHE_HTTPS_PORT=444
 APACHE_DOCUMENT_ROOT=/var/www/
 APACHE_DOCUMENT_ROOT_FLAG=:cached
 APACHE_CONFIG_PATH=/usr/local/apache2/conf
-APACHE_VIRTUAL_HOST=proj.name
+APACHE_VIRTUAL_HOST={{PROJECT-IDENTIFIER}}.{{TLD}}
 
 
 
@@ -158,7 +235,7 @@ NGINX_HTTP_PORT=80
 NGINX_HTTPS_PORT=4443
 NGINX_UPSTREAM_CONTAINER=php
 NGINX_UPSTREAM_PORT=9000
-NGINX_VIRTUAL_HOST=proj.name
+NGINX_VIRTUAL_HOST={{PROJECT-IDENTIFIER}}.{{TLD}}
 
 
 
@@ -177,7 +254,7 @@ NODE_INSTALL_NODEMON=true
 NODE_NPM_START_SCRIPT=start
 NODE_PUPPETEER_SUPPORT=false
 NODE_DOCUMENT_ROOT=/var/www/
-NODE_VIRTUAL_HOST=proj.name
+NODE_VIRTUAL_HOST={{PROJECT-IDENTIFIER}}.{{TLD}}
 
 
 #
@@ -270,7 +347,7 @@ PHP_INSTALL_ZIP=true
 #       : Only make WS_INSTALL_MCRYPT true for PHP version < 7.2
 # -------------------------------------------------------------------------------
 #
-WS_BASE_TAG=php-7.2
+WS_BASE_TAG=php-7.4
 WS_CHROME_DRIVER_VERSION=2.42
 WS_DOCUMENT_ROOT=/var/www/
 WS_DOCUMENT_ROOT_FLAG=:cached
