Fixes varaible name conflict for composer

--- a/.env
+++ b/.env
@@ -391,7 +391,7 @@ WS_INSTALL_YARN=true
 #
 #  Only PHP Specific
 #
-WS_COMPOSER_AUTH=false
+WS_COMPOSER_AUTH_JSON=false
 WS_COMPOSER_GLOBAL_INSTALL=false
 WS_COMPOSER_REPO_PACKAGIST=
 WS_INSTALL_COMPOSER=false
