--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       args:
         - BASE_TAG=${WS_BASE_TAG}
         - CHROME_DRIVER_VERSION=${WS_CHROME_DRIVER_VERSION}
-        - COMPOSER_AUTH=${WS_COMPOSER_AUTH}
+        - COMPOSER_AUTH_JSON=${WS_COMPOSER_AUTH_JSON}
         - COMPOSER_GLOBAL_INSTALL=${WS_COMPOSER_GLOBAL_INSTALL}
         - COMPOSER_REPO_PACKAGIST=${WS_COMPOSER_REPO_PACKAGIST}
         - DRUSH_VERSION=${WS_DRUSH_VERSION}
